# scheduleconverter

./: .gitignore  README.md  converter.py  example.ics  helper.py  output.txt  pyproject.toml  requirements.txt
schedule_exporter/: converter.py  helper.py
scheduleexporter/: converter.py  example.ics  helper.py
