[project]
name = "schedule-exporter"
version = "1.0.0"
description = "Converts university timetable to an importable calendar file."
authors = [{name = "Xavi", email = "xavisimpson04@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalendar>=6.1.0",
]

[project.scripts]
schedule-exporter = "schedule_exporter.converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schedule_exporter"]
