[project]
name = "schedule-exporter"
version = "1.0.0"
description = "Converts university timetable to an importable calendar file."
authors = [{ name = "Xavi", email = "xavisimpson04@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalendar>=6.1.0",
    "pyrefly>=0.33.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.23.1",
    "ruff>=0.12.3",
    "types-icalendar>=6.3.1.20250521",
]


[project.scripts]
schedule-exporter = "schedule_exporter.converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schedule_exporter"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]
